[fix] scssのz-indexを削除

--- a/app/assets/stylesheets/card.scss
+++ b/app/assets/stylesheets/card.scss
@@ -10,7 +10,6 @@
     height: 100vh;
     min-height: 300px;
     background-size: cover;
-    z-index: -1;
 }
 
 .jumbotron-extend:after {
